tests/semantic_cases/invalid/writestring_missing_arg.ob0
(* INVALID: WriteString builtin is called without required argument *)
MODULE Main;
BEGIN
  WriteString
END Main.
